httproute.yaml
# httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: farm-route
spec:
  parentRefs:
    - name: farm-gateway
  hostnames:
    - farm.kuku.tw1.ru
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-service
          port: 80
